missing images (cashed as permenently unavailable) fix

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ __pycache__/
 
 # Dropbox tokens (sensitive)
 output/dropbox_tokens.json
+
+# Local artwork cache (downloaded from Deezer CDN)
+output/artwork/
